# new-type

./: .gitignore  README.md  SETUP.md  config.example.yaml  config.yaml  install-macos.sh  main.py  pyproject.toml
Formula/: new-type.rb
core/: cleanup.py  config_ui.py  context.py  hotkey.py  recorder.py  transcriber.py
scripts/: nt-launch.sh  nt-quit.sh  nt-start.sh  nt-stop.sh  nt-toggle.sh  run-daemon.sh  waybar-status.sh
